--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="js/modernizr.js"></script>
 		<script src="js/main.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<title>Apple Cereal</title>
+		<title>Surreal Cereal</title>
 		<script>
 			$(function() {
 	  			$('a[href*=#]:not([href=#])').click(function() {
@@ -43,8 +43,7 @@
         		<div id="navbar" class="navbar-collapse collapse">
           			<ul class="nav navbar-nav">
             			<li class="wow fadeIn" data-wow-delay="250ms"><a href="#">Home</a></li>
-            			<li class="wow fadeIn" data-wow-delay="500ms"><a href="#history">History</a></li>
-        				<li class="wow fadeIn" data-wow-delay="750ms"><a href="#contact">Contact</a></li>
+            			<li class="wow fadeIn" data-wow-delay="500ms"><a href="pick.html">Make your Cereal</a></li>
           			</ul>
     			</div><!--/.nav-collapse -->
       		</div>
